--- a/static/css/style.css
+++ b/static/css/style.css
@@ -135,7 +135,7 @@ caption {
 }
 
 .newcontract .rightput {
-    background: transparent url("static/images/check.png") no-repeat scroll 400px center !important;
+    background: transparent url("/static/images/check.png") no-repeat scroll 400px center !important;
 }
 
 .newcontract .button {
@@ -344,15 +344,15 @@ caption {
 }
 
 .sidebar .qq {
-    background: #e1e1e1 url(static/images/side1.png) no-repeat center center;
+    background: #e1e1e1 url(/static/images/side1.png) no-repeat center center;
 }
 
 .sidebar .qq:hover {
-    background: #717171 url(static/images/side1_1.png) no-repeat center center;
+    background: #717171 url(/static/images/side1_1.png) no-repeat center center;
 }
 
 .sidebar .share {
-    background: #e1e1e1 url(static/images/side2.png) no-repeat center center;
+    background: #e1e1e1 url(/static/images/side2.png) no-repeat center center;
 }
 
 .sidebar .bdsharebuttonbox {
@@ -374,7 +374,7 @@ caption {
 }
 
 .sidebar .share:hover {
-    background: #717171 url(static/images/side2_1.png) no-repeat center center;
+    background: #717171 url(/static/images/side2_1.png) no-repeat center center;
 }
 
 .sidecode {
@@ -386,19 +386,19 @@ caption {
 }
 
 .sidebar .code {
-    background: #e1e1e1 url(static/images/side3.png) no-repeat center center;
+    background: #e1e1e1 url(/static/images/side3.png) no-repeat center center;
 }
 
 .sidebar .code:hover {
-    background: #717171 url(static/images/side3_1.png) no-repeat center center;
+    background: #717171 url(/static/images/side3_1.png) no-repeat center center;
 }
 
 .sidebar .totop {
-    background: #e1e1e1 url(static/images/side4.png) no-repeat center center;
+    background: #e1e1e1 url(/static/images/side4.png) no-repeat center center;
 }
 
 .sidebar .totop:hover {
-    background: #717171 url(static/images/side4_1.png) no-repeat center center;
+    background: #717171 url(/static/images/side4_1.png) no-repeat center center;
 }
 
 /*header*/
@@ -531,7 +531,7 @@ caption {
     margin-right: 120px;
     height: 38px;
     width: 60px;
-    background: url(static/images/laba.png) no-repeat 0 center;
+    background: url(/static/images/laba.png) no-repeat 0 center;
     padding-left: 20px;
     color: #fff;
 }
@@ -665,11 +665,11 @@ caption {
 }
 
 .coninform .rightput {
-    background: url(static/images/check.png) no-repeat 440px center;
+    background: url(/static/images/check.png) no-repeat 440px center;
 }
 
 #jsCompanyInfoForm .rightput {
-    background: url(static/images/check.png) no-repeat 500px center;
+    background: url(/static/images/check.png) no-repeat 500px center;
 }
 
 .dialogbox .error {
@@ -1139,7 +1139,7 @@ textarea:focus {
 
 .dialogbox .selectOption {
     color: #7C7C7C;
-    background: transparent url("static/images/select_arrow2.png") no-repeat scroll 93% 60%;
+    background: transparent url("/static/images/select_arrow2.png") no-repeat scroll 93% 60%;
     display: block;
     font-size: 12px;
     text-align: left;
@@ -1195,11 +1195,11 @@ textarea:focus {
 }
 
 .paydialog .result .pic1 {
-    background: url(static/images/paypic1.png) no-repeat left center;
+    background: url(/static/images/paypic1.png) no-repeat left center;
 }
 
 .paydialog .result .pic2 {
-    background: url(static/images/paypic2.png) no-repeat left center;
+    background: url(/static/images/paypic2.png) no-repeat left center;
 }
 
 .paydialog h2 {
@@ -1270,7 +1270,7 @@ textarea:focus {
 }
 
 .successbox .cont {
-    background: url(static/images/check2.png) no-repeat 0 center;
+    background: url(/static/images/check2.png) no-repeat 0 center;
     display: table;
     width: auto;
     height: 199px;
@@ -1278,7 +1278,7 @@ textarea:focus {
 }
 
 .failbox .cont {
-    background: url(static/images/check4.png) no-repeat 0 center !important;
+    background: url(/static/images/check4.png) no-repeat 0 center !important;
 }
 
 .failbox h2 {
@@ -1303,7 +1303,7 @@ textarea:focus {
 
 .header .middle .wp {
     height: 100%;
-    background: url(static/images/header_middle.png) no-repeat right 10px;
+    background: url(/static/images/header_middle.png) no-repeat right 10px;
 }
 
 /*select*/
@@ -1317,7 +1317,7 @@ textarea:focus {
 
 .selectOption {
     color: #67ae56;
-    background: url('static/images/select_arrow.png') no-repeat 85% 60%;
+    background: url('/static/images/select_arrow.png') no-repeat 85% 60%;
     display: block;
     cursor: pointer;
 }
@@ -1413,7 +1413,7 @@ textarea:focus {
 }
 
 .nav li.arrow {
-    background: url(static/images/nav_arrow.jpg) no-repeat 90% 15px;
+    background: url(/static/images/nav_arrow.jpg) no-repeat 90% 15px;
 }
 
 .nav .drop {
@@ -1467,7 +1467,7 @@ textarea:focus {
 
 .header .goback {
     color: #fff;
-    background: url(static/images/goback.png) no-repeat left center;
+    background: url(/static/images/goback.png) no-repeat left center;
     padding-left: 30px;
 }
 
@@ -1547,7 +1547,7 @@ textarea:focus {
 .unslider-arrow4.prev,
 .unslider-arrow5.prev {
     left: 0;
-    background: url(static/images/slide_l.png) no-repeat center center;
+    background: url(/static/images/slide_l.png) no-repeat center center;
 }
 
 .unslider-arrow.prev:hover,
@@ -1555,7 +1555,7 @@ textarea:focus {
 .unslider-arrow3.prev:hover,
 .unslider-arrow4.prev:hover,
 .unslider-arrow5.prev:hover {
-    background: url(static/images/slide_l_1.png) no-repeat center center;
+    background: url(/static/images/slide_l_1.png) no-repeat center center;
 }
 
 .unslider-arrow.next,
@@ -1564,7 +1564,7 @@ textarea:focus {
 .unslider-arrow4.next,
 .unslider-arrow5.next {
     right: 0;
-    background: url(static/images/slide_r.png) no-repeat center center;
+    background: url(/static/images/slide_r.png) no-repeat center center;
 }
 
 .unslider-arrow.next:hover,
@@ -1572,7 +1572,7 @@ textarea:focus {
 .unslider-arrow3.next:hover,
 .unslider-arrow4.next:hover,
 .unslider-arrow5.next:hover {
-    background: url(static/images/slide_r_1.png) no-repeat center center;
+    background: url(/static/images/slide_r_1.png) no-repeat center center;
 }
 
 .imgslide .dots,
@@ -1665,15 +1665,15 @@ textarea:focus {
 }
 
 .banner .fr .icon1 {
-    background: url(static/images/banner_icon1.png) no-repeat 8px center;
+    background: url(/static/images/banner_icon1.png) no-repeat 8px center;
 }
 
 .banner .fr .icon2 {
-    background: url(static/images/banner_icon2.png) no-repeat 8px center;
+    background: url(/static/images/banner_icon2.png) no-repeat 8px center;
 }
 
 .banner .fr .icon3{
-    background: url(static/images/banner_icon3.png) no-repeat 8px center;
+    background: url(/static/images/banner_icon3.png) no-repeat 8px center;
 }
 
 .banner .fr .demand_form_tips {
@@ -1696,12 +1696,12 @@ textarea:focus {
     text-indent: 0;
     font-size: 14px;
     top: 230px;
-    background: #ff9d33 url(static/images/banner_icon4.png) no-repeat 70% center;
+    background: #ff9d33 url(/static/images/banner_icon4.png) no-repeat 70% center;
     cursor: pointer;
 }
 
 .banner .fr .submit:hover {
-    background: #ff8400 url(static/images/banner_icon4.png) no-repeat 70% center;
+    background: #ff8400 url(/static/images/banner_icon4.png) no-repeat 70% center;
 }
 
 .banner .bottom {
@@ -1779,12 +1779,12 @@ textarea:focus {
 }
 
 /*
-.feature .feature1{background: url(static/images/feature1.png) no-repeat center 20px;}
-.feature .feature2{background: url(static/images/feature2.png) no-repeat center 20px;}
-.feature .feature3{background: url(static/images/feature3.png) no-repeat center 20px;}
-.feature .feature4{background: url(static/images/feature4.png) no-repeat center 20px;}
-.feature .feature5{background: url(static/images/feature5.png) no-repeat center 20px;}
-.feature .feature6{background: url(static/images/feature6.png) no-repeat center 20px;}
+.feature .feature1{background: url(/static/images/feature1.png) no-repeat center 20px;}
+.feature .feature2{background: url(/static/images/feature2.png) no-repeat center 20px;}
+.feature .feature3{background: url(/static/images/feature3.png) no-repeat center 20px;}
+.feature .feature4{background: url(/static/images/feature4.png) no-repeat center 20px;}
+.feature .feature5{background: url(/static/images/feature5.png) no-repeat center 20px;}
+.feature .feature6{background: url(/static/images/feature6.png) no-repeat center 20px;}
 */
 /*module*/
 
@@ -1966,20 +1966,20 @@ textarea:focus {
 
 .group_list .bottom .star {
     cursor: pointer;
-    background: #f0f0f0 url(static/images/star.png) no-repeat 10px center;
+    background: #f0f0f0 url(/static/images/star.png) no-repeat 10px center;
 }
 
 .group_list .bottom .collected {
     cursor: pointer;
-    background: #f0f0f0 url(static/images/star-hover.png) no-repeat 10px center;
+    background: #f0f0f0 url(/static/images/star-hover.png) no-repeat 10px center;
 }
 
 .group_list .bottom .delete-group {
-    background: #f0f0f0 url("static/images/pic12.png") no-repeat center center;
+    background: #f0f0f0 url("/static/images/pic12.png") no-repeat center center;
 }
 
 .group_list .bottom .delete-group:hover {
-    background: #f0f0f0 url("static/images/pic13.png") no-repeat center center;
+    background: #f0f0f0 url("/static/images/pic13.png") no-repeat center center;
 }
 
 .module1_2 {
@@ -2029,7 +2029,7 @@ textarea:focus {
     width: 100%;
     height: 130px;
     margin-top: 15px;
-    background: url(static/images/pathbg.png) no-repeat center center;
+    background: url(/static/images/pathbg.png) no-repeat center center;
 }
 
 .module2 li {
@@ -2094,27 +2094,27 @@ textarea:focus {
 }
 
 .module2 .path1 {
-    background: #fff url(static/images/path2.png) no-repeat center 30px;
+    background: #fff url(/static/images/path2.png) no-repeat center 30px;
 }
 
 .module2 .path2 {
-    background: #fff url(static/images/path2.png) no-repeat center 30px;
+    background: #fff url(/static/images/path2.png) no-repeat center 30px;
 }
 
 .module2 .path3 {
-    background: #fff url(static/images/path3.png) no-repeat center 30px;
+    background: #fff url(/static/images/path3.png) no-repeat center 30px;
 }
 
 .module2 .path4 {
-    background: #fff url(static/images/path4.png) no-repeat center 30px;
+    background: #fff url(/static/images/path4.png) no-repeat center 30px;
 }
 
 .module2 .path5 {
-    background: #fff url(static/images/path5.png) no-repeat center 30px;
+    background: #fff url(/static/images/path5.png) no-repeat center 30px;
 }
 
 .module2 .path6 {
-    background: #fff url(static/images/path6.png) no-repeat center 30px;
+    background: #fff url(/static/images/path6.png) no-repeat center 30px;
     margin: 0;
 }
 
@@ -2356,7 +2356,7 @@ textarea:focus {
 }
 
 .module6bg {
-    background: url(static/images/module6bg.png) no-repeat right bottom;
+    background: url(/static/images/module6bg.png) no-repeat right bottom;
 }
 
 .module6 {
@@ -2957,7 +2957,7 @@ footer .footer .line {
 
 .zoomMask {
     position: absolute;
-    background: url("static/images/mask.png") repeat scroll 0 0 transparent;
+    background: url("/static/images/mask.png") repeat scroll 0 0 transparent;
     cursor: move;
     z-index: 1;
     width: 100px;
@@ -3083,7 +3083,7 @@ footer .footer .line {
 }
 
 .groupPurchase_detail .toppro .left .collected {
-    background: #717171 url(static/images/star-btn.png) no-repeat 20px center;
+    background: #717171 url(/static/images/star-btn.png) no-repeat 20px center;
 }
 
 .groupPurchase_detail .toppro .buy {
@@ -3403,7 +3403,7 @@ footer .footer .line {
     vertical-align: top;
     font-size: 14px;
     color: #ff7800;
-    background: url(static/images/authentication.png) no-repeat left center;
+    background: url(/static/images/authentication.png) no-repeat left center;
     padding-left: 30px;
     margin-left: 20px;
 }
@@ -3437,29 +3437,29 @@ footer .footer .line {
 }
 
 .butler_list .cont .time {
-    background: url(static/images/list_time.png) no-repeat left center;
+    background: url(/static/images/list_time.png) no-repeat left center;
     padding-left: 0;
 }
 
 .butler_list .cont .share_c7 {
     margin-left: -2px;
-    background: url(static/images/share_c7.png) no-repeat left center;
+    background: url(/static/images/share_c7.png) no-repeat left center;
 }
 
 .butler_list .cont .c7, .companyranklist .cont .c8 {
-    background: url(static/images/pic7.png) no-repeat left center;
+    background: url(/static/images/pic7.png) no-repeat left center;
 }
 
 .butler_list .cont .c8, .companyranklist .cont .c7 {
-    background: url(static/images/share_c8.png) no-repeat left center;
+    background: url(/static/images/share_c8.png) no-repeat left center;
 }
 
 .butler_list .cont .pic9, .companyranklist .cont .pic9 {
-    background: url(static/images/pic9.png) no-repeat left center;
+    background: url(/static/images/pic9.png) no-repeat left center;
 }
 
 .butler_list .cont .pic10, .companyranklist .cont .pic10 {
-    background: url(static/images/pic10.png) no-repeat left center;
+    background: url(/static/images/pic10.png) no-repeat left center;
 }
 
 .butler_list .clear span {
@@ -3498,7 +3498,7 @@ footer .footer .line {
 }
 
 .butler_list_box .right .num {
-    background: url(static/images/pic8.png) no-repeat center center;
+    background: url(/static/images/pic8.png) no-repeat center center;
     width: 23px;
     height: 29px;
     line-height: 20px;
@@ -3576,7 +3576,7 @@ footer .footer .line {
 }
 
 .butler_detail_list .des .key {
-    background: url(static/images/authentication.png) no-repeat left center;
+    background: url(/static/images/authentication.png) no-repeat left center;
     padding-left: 30px;
     margin-left: 20px;
 }
@@ -3632,11 +3632,11 @@ footer .footer .line {
 }
 
 .butler_detail_list .btn .btn1 {
-    background: #717171 url(static/images/btn3.png) no-repeat 15px center;
+    background: #717171 url(/static/images/btn3.png) no-repeat 15px center;
 }
 
 .butler_detail_list .btn .btn2 {
-    background: #3a3a3a url(static/images/btn4.png) no-repeat 20px center;
+    background: #3a3a3a url(/static/images/btn4.png) no-repeat 20px center;
     position: relative;
 }
 
@@ -3684,23 +3684,23 @@ footer .footer .line {
 }
 
 .butler_detail_list .time {
-    background: url(static/images/list_time.png) no-repeat left center;
+    background: url(/static/images/list_time.png) no-repeat left center;
 }
 
 .butler_detail_list .share_c7 {
-    background: url(static/images/share_c7.png) no-repeat left center;
+    background: url(/static/images/share_c7.png) no-repeat left center;
 }
 
 .butler_detail_list .c7 {
-    background: url(static/images/pic7.png) no-repeat left center;
+    background: url(/static/images/pic7.png) no-repeat left center;
 }
 
 .butler_detail_list .c8 {
-    background: url(static/images/share_c8.png) no-repeat left center;
+    background: url(/static/images/share_c8.png) no-repeat left center;
 }
 
 .butler_detail_list .c9 {
-    background: url(static/images/share_c9.png) no-repeat left center;
+    background: url(/static/images/share_c9.png) no-repeat left center;
 }
 
 .butler_detail_list .star_score {
